<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pwd_login_rootview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/translucent_background">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/login_black_line_layout_bg"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="43dp"
                android:layout_marginTop="40dp"
                android:text="@string/alpha_count_login"
                android:textColor="@color/alpha_counta_login_color"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/et_mail"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:hint="@string/mail_address_text"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/account_password_edit_color"
                android:textColorHint="@color/alpha_count_login_color"
                android:textSize="16dp" />

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:background="@color/account_password_edit_line_color" />

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_horizontal"
                android:hint="@string/mail_password_text"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/account_password_edit_color"
                android:textColorHint="@color/alpha_count_login_color"
                android:textSize="16dp" />

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:background="@color/account_password_edit_line_color" />

            <TextView
                android:id="@+id/pwd_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/orange_circle_bg"
                android:paddingBottom="10dp"
                android:paddingLeft="85dp"
                android:paddingRight="85dp"
                android:paddingTop="10dp"
                android:text="@string/login_text"
                android:textColor="@color/white"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/wechat_login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@null"
                android:padding="10dp"
                android:text="@string/wechat_count_login"
                android:textColor="@color/alpha_count_login_color"
                android:textSize="13dp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:src="@mipmap/login_icourt_logo" />

    </RelativeLayout>
</LinearLayout>